<resources>
    <string name="app_name">GolchaIcecream</string>
    <string name="minus">-</string>

    <string name="username">Your Name</string>

    <string name="order">order</string>

    <string name="invoiceDes">▒To get invoice of your previous orders:
    \n\n {1} Click on the old invoice button below.
        \n\n {2} Enter your invoice Number and click on print button.
        \n\n {3} Wait for the invoice to download.
        \n\n {4} Check notification menu after downloaded Toast.
        \n \n ➺Else you can find your invoice in \n(Storage/Golcha/mypdf) folder.
    </string>
    <string name="vendorHighlight">➺Calculation of the amount is never been an easy task calculating
        commission,and savings is just a single click away from you</string>
    <string name="highlight">"➺Ordering ice cream has never been easier. Just enter the quantity of flavors you want, click Generate Bill, and let the deliciousness come to you!"</string>
    <string name="welcome">卐 Welcome to a world where happiness is served in a cone! Explore our
        ice cream app and let your taste buds dance with joy.
    \n\n ❀ Golcha Icecream welcomes you on this application which is designed to make you comfortable in every aspects:-
    \n\n {1} You can order online and can generate and save your bills for future.
    \n\n {2} You can calculate total by setting commission of selling vendors and can generate bill too.
    \n\n ♛ YOUR PROFILE ARE UNIQUE ALL THE HISTORY OF YOUR PROFILE WILL BE SAVED FOR FUTURE.</string>
    <string name="reset">Reset</string>
    <string name="login">Login</string>
    <string name="usernames">Username</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password?</string>
    <string name="agency_order">Agency Order</string>
    <string name="place_your_order_now">place your order now</string>
    <string name="your_order_will_be_directly_sent_to_golcha">➠Your Order Will be directly sent to golcha</string>
    <string name="order_now">"   Order Now   "</string>
    <string name="vendor_order">Vendor Order</string>
    <string name="place_your_order">place your order now</string>
    <string name="his">➠Your Order Will be saved to your History Section</string>
    <string name="_2">2</string>
    <string name="old_invoice">Old Invoice</string>
    <string name="get_invoice">Get Invoice</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="number_of_orders">Number of Orders</string>
    <string name="_0">0</string>
    <string name="your_location">YOUR LOCATION</string>
    <string name="user_info">User Info</string>
    <string name="order_history">Order History</string>
    <string name="review">Review</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="about">about</string>
    <string name="contact_info">Contact info</string>
    <string name="edits">Edit</string>
    <string name="from_our_family_to_yours_n_the_taste_of_happiness">From our family to yours,\n The taste of happiness.</string>
    <string name="usernamess">Username</string>
    <string name="your_email">Your Email</string>
    <string name="menu">MENU</string>
    <string name="total">Total</string>
    <string name="quantity">Quantity</string>
    <string name="qty_box">Qty/box</string>
    <string name="items">Items</string>
    <string name="_2000000">2000000</string>
    <string name="zero">0</string>
    <string name="_50">*50</string>
    <string name="family_pack">Family pack</string>
    <string name="delete">Delete</string>
    <string name="price_box">price/box</string>
    <string name="update_details">Update Details</string>
    <string name="item_price">Item Price</string>
    <string name="update">Update</string>
    <string name="place_order">Place Order</string>
    <string name="review_order">Review Order</string>
    <string name="the_actual_order_might_get_varied_to_your_original_order_according_to_the_availability_of_products_once_order_will_be_shipped_you_will_get_invoice_on_notification_panel">➩The actual order might get varied to your original order, According to the availability of products. Once Order will be shipped you will get Invoice On Notification panel</string>
    <string name="admin">ADMIN</string>
    <string name="orders">Orders</string>
    <string name="user_management">User \n Management</string>
    <string name="price_management">Price \n Management</string>
    <string name="register">Register</string>
    <string name="manage">MANAGE</string>
    <string name="contact_golcha_for_any_kind_of_changes">➺Contact Golcha for any kind of changes</string>
    <string name="change_details">Change Details</string>
    <string name="item_name">Item Name</string>
    <string name="sasa">Name:</string>
    <string name="date">Date:</string>
    <string name="address">Address:</string>
    <string name="item">Item</string>
    <string name="cost">Cost</string>
    <string name="comission">Comission:</string>
    <string name="dues">Dues:</string>
    <string name="menus">MENU</string>
    <string name="ssss">Name</string>
    <string name="aaa">Address</string>
    <string name="_5">5</string>
    <string name="price">Price</string>
    <string name="calculate_total">Calculate Total</string>
    <string name="set_ncomission">Set\nComission</string>
    <string name="invoice">Invoice</string>
    <string name="depart">Depart</string>
    <string name="returns">Return</string>
    <string name="asa">Total</string>
    <string name="kaccha_mango">Kaccha Mango</string>
    <string name="_0_00">₹0.00</string>
    <string name="litchi">Litchi</string>
    <string name="_00">0</string>
    <string name="strawberry">Strawberry</string>
    <string name="returna">Return</string>
    <string name="afaf">Return</string>
    <string name="departs">Depart</string>
    <string name="asdad">Return</string>
    <string name="saadds">Total</string>
    <string name="sasad">Kaccha Mango</string>
    <string name="a">₹</string>
    <string name="asas">5</string>
    <string name="litchis">Litchi</string>
    <string name="sstrawberry">Strawberry</string>
    <string name="cola">Cola</string>
    <string name="pineapple">Pineapple</string>
    <string name="orange">Orange</string>
    <string name="mango_bar">Mango Bar</string>
    <string name="cup_s">Cup-S</string>
    <string name="cup_b">Cup-B</string>
    <string name="_10">10</string>
    <string name="chocobar_s">Chocobar-S</string>
    <string name="chocobar_b">Chocobar-B</string>
    <string name="_15">15</string>
    <string name="matka">Matka</string>
    <string name="_25">25</string>
    <string name="king_cone_s">King Cone-S</string>
    <string name="_12">12</string>
    <string name="king_cone_b">King Cone-B</string>
    <string name="asasas">25</string>
    <string name="nutty_crunch">Nutty Crunch</string>
    <string name="_20">20</string>
    <string name="keshar_pista">Keshar Pista</string>
    <string name="_20a">20</string>
    <string name="bonanza">Bonanza</string>
    <string name="_25a">25</string>
    <string name="family_packa">Family Pack</string>
    <string name="_100">100</string>
    <string name="family_pack_2in1">Family Pack (2in1)</string>
    <string name="_120">120</string>
    <string name="enter_notes_of_vendor">Enter Notes Of Vendor</string>
    <string name="totala">Total:</string>
    <string name="generate_bill">Generate Bill</string>
    <string name="todos">TODO</string>
    <string name="signout">SignOut</string>
    <string name="print_pdf">Print pdf</string>
    <string name="enter_invoice_no">Enter Invoice No.</string>
    <string name="change">Change</string>
    <string name="enter_srno_of_item">Enter SrNo. Of Item</string>
    <string name="agency_price">Agency Price</string>
    <string name="vendor_price">Vendor price</string>
    <string name="changes">Change</string>
    <string name="enter_srno_of_items">Enter SrNo. Of Item</string>
    <string name="menuss">MENU</string>
    <string name="itemss">!Items</string>
    <string name="qty_boxs">| qty/(box) |</string>
    <string name="box">BOX</string>
    <string name="kaccha_aam_250">Kaccha Aam (₹250)</string>
    <string name="_50sa">*50</string>
    <string name="litchi_250">Litchi (₹250)</string>
    <string name="ssaa">*50</string>
    <string name="strawberry_250">Strawberry (₹250)</string>
    <string name="_50s">*50</string>
    <string name="cola_250">Cola (₹250)</string>
    <string name="_50ssa">*50</string>
    <string name="pineapple_250">Pineapple(₹250)</string>
    <string name="_50ss">*50</string>
    <string name="orange_250">Orange(₹250)</string>
    <string name="_50aq">*50</string>
    <string name="mango_bar_250">Mango Bar(₹250)</string>
    <string name="qwqw">*50</string>
    <string name="cup_s_150">Cup-S(₹150)</string>
    <string name="qq">*30</string>
    <string name="cup_b_240">Cup-B(₹240)</string>
    <string name="_24">*24</string>
    <string name="chocobar_s_300">Chocobar-s(₹300)</string>
    <string name="_30">*30</string>
    <string name="chocobar_b_360">Chocobar-B(₹360)</string>
    <string name="_24a">*24</string>
    <string name="matka_300">Matka(₹300)</string>
    <string name="_12a">*12</string>
    <string name="king_cone_s_420">King Cone-S(₹420)</string>
    <string name="_35">*35</string>
    <string name="king_cone_b_500">King Cone-B(₹500)</string>
    <string name="aa">*20</string>
    <string name="nutty_crunch_400">Nutty Crunch(₹400)</string>
    <string name="_20aa">*20</string>
    <string name="keshar_pista_240">Keshar Pista(₹240)</string>
    <string name="_12aa">*12</string>
    <string name="bonanza_200">Bonanza(₹200)</string>
    <string name="_8">*8</string>
    <string name="family_pack_100">Family Pack(₹100)</string>
    <string name="_1">*1</string>
    <string name="family_pack_120">Family Pack(₹120)</string>
    <string name="_1a">*1</string>
    <string name="enter_note_here">Enter Note Here</string>
    <string name="ordersa">Orders</string>
    <string name="cam">📸</string>


</resources>