<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuList">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textmenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:paddingTop="20dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:layout_below="@+id/textmenu"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/items"
                    android:layout_gravity="right"
                    android:textAlignment="center"
                    android:layout_weight="1.8"
                    tools:ignore="RtlCompat,RtlHardcoded" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/qty_box"
                    android:layout_gravity="right"
                    android:textAlignment="center"
                    android:layout_weight="0.8"
                    tools:ignore="RtlCompat,RtlHardcoded" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:layout_gravity="right"
                    android:textAlignment="center"
                    android:layout_weight="0.8"
                    tools:ignore="RtlCompat,RtlHardcoded" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textAlignment="center"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    tools:ignore="RtlCompat,RtlHardcoded" />


            </LinearLayout>



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/itemList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>








            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="66dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp"
                android:layout_margin="10dp"

                >







            </androidx.cardview.widget.CardView>





        </LinearLayout>



    </RelativeLayout>






</ScrollView>