<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textmenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:paddingTop="20dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>







            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:layout_below="@+id/textmenu"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/items"
                        android:layout_gravity="right"
                        android:textAlignment="center"
                        android:layout_weight="1.8"
                        tools:ignore="RtlCompat,RtlHardcoded" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/qty_box"
                        android:layout_gravity="right"
                        android:textAlignment="center"
                        android:layout_weight="0.8"
                        tools:ignore="RtlCompat,RtlHardcoded" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/price_box"
                        android:layout_gravity="right"
                        android:textAlignment="center"
                        android:layout_weight="0.8"
                        tools:ignore="RtlCompat,RtlHardcoded" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/edit"
                        android:layout_gravity="right"
                        android:textAlignment="center"
                        android:layout_weight="0.8"
                        tools:ignore="RtlCompat,RtlHardcoded" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        android:textAlignment="center"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        tools:ignore="RtlCompat,RtlHardcoded" />


                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/itemLists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    />



            </LinearLayout>





        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="2dp">

            <Button
                android:id="@+id/btnAddItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="40dp"
                android:text="Add Item" />


        </RelativeLayout>


    </RelativeLayout>








</LinearLayout>