<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp"
    android:layout_margin="10dp"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/itemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:layout_weight="1.8"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
                android:text="@string/family_pack"
                android:textColor="#007236"
                android:textSize="15sp"
                android:textStyle="normal"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/boxQty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="0.8"
                android:text="@string/_50"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="normal"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/qty"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/username_box"
                android:ems="10"
                android:inputType="number"
                android:padding="5dp"
                android:layout_weight="0.8"
                android:layout_gravity="right"
                android:paddingBottom="10dp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,RtlCompat,RtlHardcoded"
                android:autofillHints="" />

            <TextView
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/_2000000"
                android:textAlignment="center"
                android:textColor="@color/black" />


        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>