<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:id="@+id/rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/cardback"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/itemNames"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:layout_weight="1.8"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
                android:text="@string/family_pack"
                android:textColor="#007236"
                android:textSize="15sp"
                android:textStyle="normal"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/itemBoxQtys"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="0.8"
                android:text="@string/_50"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:ignore="RtlCompat" />
            <TextView
                android:id="@+id/itemPrices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="0.8"
                android:text="₹300"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/username_box"
                android:ems="10"
                android:padding="5dp"
                android:layout_weight="0.8"
                android:layout_gravity="right"
                android:paddingBottom="10dp"
                android:text="@string/edit"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                tools:ignore="LabelFor,RtlCompat,RtlHardcoded"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnDeletes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/username_box"
                android:padding="5dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textColor="@color/black" />


        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>