<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ItemDetailsUpdateVendor"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/update_details"
        android:background="@color/purple_500"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Item Name"/>


    <soup.neumorphism.NeumorphCardView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:neumorph_shapeType="pressed"

        >
        <EditText
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:background="@null"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center"
            android:textCursorDrawable="@drawable/cursor"
            />

    </soup.neumorphism.NeumorphCardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/item_price"/>


    <soup.neumorphism.NeumorphCardView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:neumorph_shapeType="pressed"

        >
        <EditText
            android:id="@+id/itemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:background="@null"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center"
            android:inputType="number"
            android:textCursorDrawable="@drawable/cursor"
            />

    </soup.neumorphism.NeumorphCardView>


    <soup.neumorphism.NeumorphButton
        android:id="@+id/btnUpdates"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:drawablePadding="8dp"
        android:text="@string/update"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/carbon_red_900"

        />






</LinearLayout>